fix styles on request page, navbar is not cut off anymore

--- a/src/components/pages/requests/style.scss
+++ b/src/components/pages/requests/style.scss
@@ -15,8 +15,8 @@
 
 
     .requests-results-container {
-        flex-grow: 2;
         display: flex;
+        flex: 1;
         flex-flow: column;
         align-items: center;
         overflow: scroll;
